# Speculae

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: DISCUSSIONS_CATEGORIES.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_integration.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  ci.yml
desktop/: Cargo.toml  README.md  build.rs  tauri.conf.json
desktop/capabilities/: default.json
desktop/src/: main.rs
docs/: agent-usage.md  community.md  configuration.md  developer-guide.md  export-import.md  getting-started.md  openapi.yaml  pattern-detection.md  user-guide.md  wellness-features.md
scripts/: build_exe.py  import_json.py
src/speculae/: __init__.py  cli.py  config.py  db.py  embeddings.py  image_storage.py  insights.py  models.py  patterns.py  wellness.py
src/speculae/ui/: __init__.py  reader.py  theme.py  writer.py
src/speculae/web/: index.html  server.py
tests/: conftest.py  test_api_smoke.py  test_db.py  test_export_import.py  test_insights.py  test_models.py  test_patterns.py  test_wellness.py
