[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speculae"
version = "0.1.0"
description = "A local-first, natively multi-agentic journaling sanctuary and wellness companion for humans and AI fleets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "journal", "wellness", "meditation", "breathing", "patterns",
    "mental-health", "local-first", "privacy", "ai", "agents",
    "ai-agents", "multi-agentic", "emotional-continuity", "python",
    "html", "rust", "tauri", "flask", "sqlite"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Other/Nonlisted Topic",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "python-dateutil>=2.8.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "tomli_w>=1.0.0",
    "flask>=3.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.20",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "speculae[semantic,llm]",
]

[project.scripts]
speculae = "speculae.cli:main"
speculae-web = "speculae.web.server:main"

[project.urls]
Homepage = "https://github.com/0x923041-dotcom/Speculae"
Repository = "https://github.com/0x923041-dotcom/Speculae"
Issues = "https://github.com/0x923041-dotcom/Speculae/issues"
Documentation = "https://github.com/0x923041-dotcom/Speculae/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]
include = ["speculae", "speculae.*"]

[tool.setuptools.package-data]
speculae = ["web/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E402"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Each of the input arrays is constant:scipy.stats.ConstantInputWarning",
]
